antlr/NiklausParser.py
# Generated from Niklaus.g by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class NiklausParser ( Parser ):

    grammarFileName = "Niklaus.g"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "','", "'('", "')'", 
                     "<INVALID>", "'read'", "'var'", "'write'", "':='", 
                     "'while'", "'if'", "'else'", "'program'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "SIGNE", "READ", 
                      "VAR", "WRITE", "EQUAL", "WHILE", "IF", "ELSE", "PROGRAM", 
                      "INT", "COMMENT", "WS", "ADDOP", "MULTOP", "ID" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_assignment = 2
    RULE_instruction = 3
    RULE_comparison = 4
    RULE_condition = 5
    RULE_loop = 6
    RULE_read_var = 7
    RULE_write_exp = 8
    RULE_expr = 9
    RULE_term = 10
    RULE_factor = 11

    ruleNames =  [ "program", "declaration", "assignment", "instruction", 
                   "comparison", "condition", "loop", "read_var", "write_exp", 
                   "expr", "term", "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    SIGNE=7
    READ=8
    VAR=9
    WRITE=10
    EQUAL=11
    WHILE=12
    IF=13
    ELSE=14
    PROGRAM=15
    INT=16
    COMMENT=17
    WS=18
    ADDOP=19
    MULTOP=20
    ID=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(NiklausParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(NiklausParser.ID, 0)

        def instruction(self):
            return self.getTypedRuleContext(NiklausParser.InstructionContext,0)


        def declaration(self):
            return self.getTypedRuleContext(NiklausParser.DeclarationContext,0)


        def getRuleIndex(self):
            return NiklausParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = NiklausParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(NiklausParser.PROGRAM)
            self.state = 25
            self.match(NiklausParser.ID)
            self.state = 26
            self.match(NiklausParser.T__0)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==NiklausParser.VAR:
                self.state = 27
                self.declaration()


            self.state = 30
            self.match(NiklausParser.T__1)
            self.state = 31
            self.instruction()
            self.state = 32
            self.match(NiklausParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(NiklausParser.VAR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(NiklausParser.ID)
            else:
                return self.getToken(NiklausParser.ID, i)

        def getRuleIndex(self):
            return NiklausParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = NiklausParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(NiklausParser.VAR)
            self.state = 35
            self.match(NiklausParser.ID)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NiklausParser.T__3:
                self.state = 36
                self.match(NiklausParser.T__3)
                self.state = 37
                self.match(NiklausParser.ID)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(NiklausParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NiklausParser.ID, 0)

        def EQUAL(self):
            return self.getToken(NiklausParser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(NiklausParser.ExprContext,0)


        def getRuleIndex(self):
            return NiklausParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = NiklausParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(NiklausParser.ID)
            self.state = 46
            self.match(NiklausParser.EQUAL)
            self.state = 47
            self.expr()
            self.state = 48
            self.match(NiklausParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def write_exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NiklausParser.Write_expContext)
            else:
                return self.getTypedRuleContext(NiklausParser.Write_expContext,i)


        def read_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NiklausParser.Read_varContext)
            else:
                return self.getTypedRuleContext(NiklausParser.Read_varContext,i)


        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NiklausParser.ConditionContext)
            else:
                return self.getTypedRuleContext(NiklausParser.ConditionContext,i)


        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NiklausParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(NiklausParser.AssignmentContext,i)


        def comparison(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NiklausParser.ComparisonContext)
            else:
                return self.getTypedRuleContext(NiklausParser.ComparisonContext,i)


        def loop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NiklausParser.LoopContext)
            else:
                return self.getTypedRuleContext(NiklausParser.LoopContext,i)


        def getRuleIndex(self):
            return NiklausParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = NiklausParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NiklausParser.T__4) | (1 << NiklausParser.READ) | (1 << NiklausParser.WRITE) | (1 << NiklausParser.WHILE) | (1 << NiklausParser.IF) | (1 << NiklausParser.INT) | (1 << NiklausParser.ID))) != 0):
                self.state = 56
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 50
                    self.write_exp()
                    pass

                elif la_ == 2:
                    self.state = 51
                    self.read_var()
                    pass

                elif la_ == 3:
                    self.state = 52
                    self.condition()
                    pass

                elif la_ == 4:
                    self.state = 53
                    self.assignment()
                    pass

                elif la_ == 5:
                    self.state = 54
                    self.comparison()
                    pass

                elif la_ == 6:
                    self.state = 55
                    self.loop()
                    pass


                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NiklausParser.ExprContext)
            else:
                return self.getTypedRuleContext(NiklausParser.ExprContext,i)


        def SIGNE(self):
            return self.getToken(NiklausParser.SIGNE, 0)

        def getRuleIndex(self):
            return NiklausParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)




    def comparison(self):

        localctx = NiklausParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comparison)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.expr()
            self.state = 62
            self.match(NiklausParser.SIGNE)
            self.state = 63
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(NiklausParser.IF, 0)

        def comparison(self):
            return self.getTypedRuleContext(NiklausParser.ComparisonContext,0)


        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NiklausParser.InstructionContext)
            else:
                return self.getTypedRuleContext(NiklausParser.InstructionContext,i)


        def ELSE(self):
            return self.getToken(NiklausParser.ELSE, 0)

        def getRuleIndex(self):
            return NiklausParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = NiklausParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(NiklausParser.IF)
            self.state = 66
            self.match(NiklausParser.T__4)
            self.state = 67
            self.comparison()
            self.state = 68
            self.match(NiklausParser.T__5)
            self.state = 69
            self.match(NiklausParser.T__1)
            self.state = 70
            self.instruction()
            self.state = 71
            self.match(NiklausParser.T__2)
            self.state = 72
            self.match(NiklausParser.ELSE)
            self.state = 73
            self.match(NiklausParser.T__1)
            self.state = 74
            self.instruction()
            self.state = 75
            self.match(NiklausParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(NiklausParser.WHILE, 0)

        def comparison(self):
            return self.getTypedRuleContext(NiklausParser.ComparisonContext,0)


        def instruction(self):
            return self.getTypedRuleContext(NiklausParser.InstructionContext,0)


        def getRuleIndex(self):
            return NiklausParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = NiklausParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(NiklausParser.WHILE)
            self.state = 78
            self.match(NiklausParser.T__4)
            self.state = 79
            self.comparison()
            self.state = 80
            self.match(NiklausParser.T__5)
            self.state = 81
            self.match(NiklausParser.T__1)
            self.state = 82
            self.instruction()
            self.state = 83
            self.match(NiklausParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Read_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(NiklausParser.READ, 0)

        def ID(self):
            return self.getToken(NiklausParser.ID, 0)

        def getRuleIndex(self):
            return NiklausParser.RULE_read_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead_var" ):
                listener.enterRead_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead_var" ):
                listener.exitRead_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead_var" ):
                return visitor.visitRead_var(self)
            else:
                return visitor.visitChildren(self)




    def read_var(self):

        localctx = NiklausParser.Read_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_read_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(NiklausParser.READ)
            self.state = 86
            self.match(NiklausParser.ID)
            self.state = 87
            self.match(NiklausParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Write_expContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(NiklausParser.WRITE, 0)

        def expr(self):
            return self.getTypedRuleContext(NiklausParser.ExprContext,0)


        def getRuleIndex(self):
            return NiklausParser.RULE_write_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite_exp" ):
                listener.enterWrite_exp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite_exp" ):
                listener.exitWrite_exp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite_exp" ):
                return visitor.visitWrite_exp(self)
            else:
                return visitor.visitChildren(self)




    def write_exp(self):

        localctx = NiklausParser.Write_expContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_write_exp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(NiklausParser.WRITE)
            self.state = 90
            self.expr()
            self.state = 91
            self.match(NiklausParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NiklausParser.TermContext)
            else:
                return self.getTypedRuleContext(NiklausParser.TermContext,i)


        def ADDOP(self, i:int=None):
            if i is None:
                return self.getTokens(NiklausParser.ADDOP)
            else:
                return self.getToken(NiklausParser.ADDOP, i)

        def getRuleIndex(self):
            return NiklausParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = NiklausParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.term()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NiklausParser.ADDOP:
                self.state = 94
                self.match(NiklausParser.ADDOP)
                self.state = 95
                self.term()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NiklausParser.FactorContext)
            else:
                return self.getTypedRuleContext(NiklausParser.FactorContext,i)


        def MULTOP(self, i:int=None):
            if i is None:
                return self.getTokens(NiklausParser.MULTOP)
            else:
                return self.getToken(NiklausParser.MULTOP, i)

        def getRuleIndex(self):
            return NiklausParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = NiklausParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.factor()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NiklausParser.MULTOP:
                self.state = 102
                self.match(NiklausParser.MULTOP)
                self.state = 103
                self.factor()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return NiklausParser.RULE_factor

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FactorBlockContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NiklausParser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(NiklausParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactorBlock" ):
                listener.enterFactorBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactorBlock" ):
                listener.exitFactorBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactorBlock" ):
                return visitor.visitFactorBlock(self)
            else:
                return visitor.visitChildren(self)


    class FactorIntContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NiklausParser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(NiklausParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactorInt" ):
                listener.enterFactorInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactorInt" ):
                listener.exitFactorInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactorInt" ):
                return visitor.visitFactorInt(self)
            else:
                return visitor.visitChildren(self)


    class FactorIdContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NiklausParser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(NiklausParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactorId" ):
                listener.enterFactorId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactorId" ):
                listener.exitFactorId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactorId" ):
                return visitor.visitFactorId(self)
            else:
                return visitor.visitChildren(self)



    def factor(self):

        localctx = NiklausParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_factor)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NiklausParser.ID]:
                localctx = NiklausParser.FactorIdContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.match(NiklausParser.ID)
                pass
            elif token in [NiklausParser.INT]:
                localctx = NiklausParser.FactorIntContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(NiklausParser.INT)
                pass
            elif token in [NiklausParser.T__4]:
                localctx = NiklausParser.FactorBlockContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.match(NiklausParser.T__4)
                self.state = 112
                self.expr()
                self.state = 113
                self.match(NiklausParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





